# chip8

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
.github/workflows/: cmake.yml
cmake/Modules/: ParseAndAddCatchTests.cmake
include/: Audio.hpp  Chip8.hpp  Emulator.hpp
src/: Audio.cpp  CMakeLists.txt  Chip8.cpp  Emulator.cpp  main.cpp
tests/src/: CMakeLists.txt  tests-chip8.cpp
